<resources>
    <string name="app_name">Baby Match</string>
    <string name="welcome_message">WELCOME TO BABY MATCH</string>
    <string name="select_level">Select Level</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="play"> PLAY</string>
    <string name="time">Timer</string>
    <string name="result">Result</string>
    <string name="won">YOU WON!</string>
    <string name="lost">YOU LOST!</string>
    <string name="ok">OK</string>
    <string name="win_toast">Good Job, play another level or difficulty</string>
    <string name="lose_toast">"Don't Worry, Try Again!"</string>
    <string name="time_up">Time is UP, YOU LOST!</string>
    <string name="time_left">"Time Left: "</string>
    <string name="seconds">" seconds"</string>
    <string name="invalid_error">"Invalid!"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>